; ModuleID = '/home/carl/AnghaBench/libgit2/tests/buf/extr_oom.c_oom_realloc.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/buf/extr_oom.c_oom_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* (i8*, i64, i8*, i32)* }

@std_alloc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64, i8*, i32)* @oom_realloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @oom_realloc(i8* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i64, i64* %6, align 8
  %10 = icmp ugt i64 %9, 100
  br i1 %10, label %11, label %12

11:                                               ; preds = %4
  br label %19

12:                                               ; preds = %4
  %13 = load i8* (i8*, i64, i8*, i32)*, i8* (i8*, i64, i8*, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @std_alloc, i32 0, i32 0), align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i8* %13(i8* %14, i64 %15, i8* %16, i32 %17)
  br label %19

19:                                               ; preds = %12, %11
  %20 = phi i8* [ null, %11 ], [ %18, %12 ]
  ret i8* %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
